Fix jumping issue.

--- a/src/components/letterCard/LetterCard.module.scss
+++ b/src/components/letterCard/LetterCard.module.scss
@@ -8,6 +8,7 @@
   width: 0.5rem;
   font-size: 1.5rem;
   line-height: 1.5rem;
+  z-index: 1;
 
   @media screen and (min-width: 40rem) {
     height: 1rem;
